# othello

./: .travis.yaml  .travis.yml  CMakeLists.txt  README.md
config/: detect_hand.txt
config/param_for_costmap/: test.txt
include/: Board.hpp  CalcCost.hpp  Computer.hpp  Costmap1.hpp  Game.hpp  Hand.hpp  Hyoukakansuu.hpp  Player.hpp  Point.hpp  QFunction.hpp
src/: Board.cpp  CalcCost.cpp  Computer.cpp  Costmap1.cpp  Game.cpp  Hand.cpp  Hyoukakansuu.cpp  Makefile  Player.cpp  Point.cpp  QFunction.cpp  init_study.cpp  main.cpp
test_code/: CMakeLists.txt  Conv_test.cpp
test_code/include/: .NeuralNetwork.hpp.swp  ConvolutionPooling.hpp  NeuralNetwork.hpp
test_code/src/: Conv_test.cpp  ConvolutionPooling.cpp  ConvolutionPoolingtest.cpp  NeuralNetwork.cpp  NeuralNetworktest.cpp  Neural_test.cpp
